fix: replace devoxx section to avoid horizontal scrollbar

--- a/public/stylesheets/suggest.css
+++ b/public/stylesheets/suggest.css
@@ -126,8 +126,10 @@ h4 {
 *********************************/
 
 section#devoxx {
-    width: 480px;
-    margin: 0 0 0 67%;
+    width: 470px;
+    margin: auto;
+    margin-right: 1px;
+    /*margin: 0 1% 0 0;*/
 }
 
 section#devoxx fieldset {
